Bug #21884 --> backing out Rick's changes to http to fix this regression crasher tonight. a=chofmann