netwerk/protocol/http/src/nsHTTPChannel.h
@@ -86,12 +86,9 @@ public:
     nsresult            Open();
     nsresult            Redirect(const char *aURL,
                                  nsIChannel **aResult);
-
     nsresult            ResponseCompleted(nsIChannel* aTransport, 
-                                          nsIStreamListener* aListener,
                                           nsresult aStatus,
                                           const PRUnichar* aMsg);
-
     nsresult            SetResponse(nsHTTPResponse* i_pResp);
     nsresult            GetResponseContext(nsISupports** aContext);
     nsresult            CacheReceivedResponse(nsIStreamListener *aListener,
@@ -103,8 +100,6 @@ public:
     nsresult            SetUsingProxy(PRBool i_UsingProxy);
 
     nsresult            FinishedResponseHeaders();
-
-    nsresult            GetDataConsumer(nsIStreamListener* *aListener);
 
 protected:
     nsresult            CheckCache();
