netwerk/protocol/http/src/nsHTTPResponseListener.h
@@ -63,7 +63,7 @@ public:
     NS_DECL_NSISTREAMLISTENER
 
     nsresult FireSingleOnData(nsIStreamListener *aListener, nsISupports *aContext);
-    nsresult Abort();
+    void     Abort() { mAborted = PR_TRUE; }
     void     SetResponseDataListener(nsIStreamListener *aListener) {
       mResponseDataListener = aListener;
     }
@@ -86,6 +86,7 @@ protected:
     nsHTTPResponse*             mResponse;
     PRBool              	      mFirstLineParsed;
     PRBool              	      mHeadersDone;
+    PRBool                      mAborted;
 
     nsCOMPtr<nsIInputStream>    mDataStream;
     PRUint32                    mBytesReceived; 
